# deadbeef-cui

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile.legacy  README.md  bugreport.md  cui-update.md  design.md  gemini.run  manifest.json  manifest.json.example  patch2.py  patch_main.py  patchnotes.md  roadmap.md  spec.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: cui_data.c  cui_data.h  cui_globals.h  cui_scriptable.c  cui_scriptable.h  cui_widget.c  cui_widget.h  main.c
tests/: mock_deadbeef.c  mock_deadbeef.h  test_cui.c
